# rage-benchmarks

./: .gitignore  BENCHMARK_RESULTS.md  README.md  pyproject.toml  run_benchmark_hf.py
benchmarks/: __init__.py  baseline_rag.py  baseline_rag_hf.py  hf_embeddings.py  llm_exploration.py  locomo_benchmark.py  locomo_connector.py  locomo_ingest.py  simple_retrieval.py
benchmarks/locomo/: __init__.py
benchmarks/locomo/data/: conv-26-questions.json  conv-26-sessions.json  conv-26.json
benchmarks/memu/: __init__.py  locomo_runner.py  run_memu_conv26.py
benchmarks/rage-substrate/: baseline_rag.py  metrics.py  queries.json  simple_retrieval.py
data/: queries.json  queries_llm.json  queries_retrieval.json
docs/: benchmark-analysis-20260224.md  benchmark-modes.md  context-gap-analysis.md  learnings-from-memu.md  memu-analysis.md  memu-benchmark-results.md  retrieval-analysis-2026-02-20.md  spot-check-report.md
memoryarena/: README.md
memoryarena/data/: README.md
scripts/: backfill_territory_summaries.py  rejudge.py
